...
                                  style: const TextStyle(
                                    fontSize: 14,
                                    color: CupertinoColors.inactiveGray,
                                  ),
                                )
                              : const Text(
                                  "Join the conversation!",
                                  style: TextStyle(
                                      fontSize: 14,
                                      color: CupertinoColors.inactiveGray),
                                ),
                        ],
                      ),
...
